--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -8344,30 +8344,15 @@ body.scroll_fixed {
 }
 
 .die__list-item {
-  background: transparent;
   border-radius: 4px;
   padding: 0px 3px;
   font-size: 10px;
-  border: 1px solid #fff;
   color: #fff;
   line-height: 134%;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
+  background: rgba(255,255,255, 0.7);
+  color: #000000;
 }
-
-/* .city-col__slider {
-  position: relative;
-}
-.city-col__slider::before {
-  content: "";
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  left: 0;
-  top: 0;
-  background: rgba(0,0,0,0.2);
-  z-index: 3;
-  pointer-events: none;
-} */
