--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -8357,3 +8357,28 @@ body.scroll_fixed {
   background: rgba(255,255,255, 0.7);
   color: #000000;
 }
+
+.contacts__subtitle {
+  font-weight: bold;
+  margin-bottom: 15px;
+  font-size: 20px;
+}
+
+.contacts__list {
+  margin-bottom: 20px;
+}
+
+.contacts__list li:not(:last-child) {
+  margin-bottom: 13px;
+}
+
+.contacts__map {
+  height: 500px;
+  width: 100%;
+}
+
+@media (max-width: 539px) {
+  .contacts__map {
+    height: 300px;
+  }
+}
