--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -3624,9 +3624,10 @@ body.scroll_fixed {
   left: 0;
   background: #ffffff;
   z-index: 163;
-  height: 100vh;
+  /* height: 100vh; */
   overflow-y: auto;
   width: 100%;
+  height: calc(var(--app-height)) !important;
 }
 
 .place-popup-collage::after {
@@ -7010,6 +7011,7 @@ body.scroll_fixed {
 	-ms-user-select: none;
 	user-select: none;
   padding: 25px 20px 10px 20px;
+  border: 2px solid #508cfa;
 }
 
 .input-wrapper .text{
@@ -8430,4 +8432,656 @@ body.scroll_fixed {
 }
 .iti.iti--container .iti__country-list {
   border-radius: 15px;
+}
+.preview {
+  max-width: 1383px;
+  margin: 0 auto;
+  position: relative;
+  color: #fff;
+  padding: 125px 40px;
+}
+
+.preview__bg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  object-fit: cover;
+  z-index: -1;
+}
+
+.preview h1 {
+  color: #FFF;
+  font-family: Geometria;
+  font-size: 37px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-bottom: 15px;
+}
+
+.preview__subtitle {
+  color: #FFF;
+  font-family: Montserrat;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: 50px;
+}
+
+.preview__list {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 40px;
+  column-gap: 40px;
+}
+
+.preview__list li {
+  display: flex;
+  align-items: center;
+  color: #FFF;
+  font-family: Montserrat;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  gap: 10px;
+  flex: 0 0 calc(50% - 20px);
+}
+
+.preview__list li span{
+  font-weight: 700;
+}
+
+
+.preview__list li .icon {
+  border-radius: 41px;
+  border: 1px solid #FFF;
+  min-width: 66px;
+  min-height: 36px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.preview__list li .icon svg{
+  min-width: 23px;
+  min-height: 23px;
+}
+
+.preview__content {
+  max-width: 651px;
+}
+
+
+@media (max-width: 767px) {
+  .preview {
+    padding: 50px 20px;
+  }
+  
+  .preview__bg {
+  }
+  
+  .preview h1 {
+    font-size: 28px;
+  }
+  
+  .preview__subtitle {
+    margin-bottom: 20px;
+  }
+  
+  .preview__list {
+    row-gap: 20px;
+  }
+  
+  .preview__list li {
+    flex: 0 0 100%;
+  }
+  
+  .preview__list li span{
+  }
+  
+  
+  .preview__list li .icon {
+  }
+  
+  .preview__list li .icon svg{
+  }
+  
+  .preview__content {
+  }
+}
+
+@media (max-width: 539px) {
+  .preview {
+    padding: 30px 20px;
+  }
+  
+  .preview__bg {
+  }
+  
+  .preview h1 {
+    font-size: 25px;
+  }
+  
+  .preview__subtitle {
+    margin-bottom: 15px;
+  }
+  
+  .preview__list {
+  }
+  
+  .preview__list li {
+  }
+  
+  .preview__list li span{
+  }
+  
+  
+  .preview__list li .icon {
+  }
+  
+  .preview__list li .icon svg{
+  }
+  
+  .preview__content {
+  }
+}
+
+.container-w .search-nav {
+  max-width: 1413px;
+  margin-top: 30px;
+}
+
+.catalog {
+  max-width: 1383px;
+  margin: 0 auto;
+  border-radius: 45px;
+  background: #4F8BF9;
+}
+
+.catalog__logo {
+  margin-bottom: 20px;
+}
+
+.catalog__logo img {
+  width: 115px;
+}
+
+.catalog__content {
+  display: flex;
+  gap: 50px;
+  padding-left: 88px;
+  padding-bottom: 60px;
+}
+
+.catalog__text-w {
+  position: relative;
+  flex: 0 0 350px;
+  height: fit-content;
+}
+
+.catalog__text-bg {
+  background: #5D96FF;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  left: 0;
+  top: 0;
+  border-radius: 0 0 47% 47%;
+}
+
+.catalog__text {
+  border-radius: 1.87px;
+  background: #F0F5FF;
+  box-shadow: -17px 16px 32.7px 0px rgba(0, 28, 56, 0.12);
+  height: fit-content;
+  position: relative;
+  transform: rotate(-9deg);
+  margin-top: 58px;
+  margin-right: 30px;
+}
+
+.catalog__title {
+  color: #002850;
+  font-family: Geometria;
+  font-size: 18.072px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 111.962%; /* 20.233px */
+  margin-bottom: 10px;
+  position: relative;
+  z-index: 2;
+}
+
+.catalog__subtitle {
+  color: #002850;
+  font-family: Geometria;
+  font-size: 10.843px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 125%; /* 13.554px */
+  margin-bottom: 20px;
+}
+
+.catalog__pic {
+  width: 100%;
+  display: block;
+  margin-bottom: 20px;
+}
+
+.catalog__text-footer {
+  color: #FFF;
+  font-family: Geometria;
+  font-size: 10.843px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 111.962%; /* 12.14px */
+  padding: 15px 25px;
+  background: #002850;
+  text-align: center;
+}
+
+.catalog__text-body {
+  padding: 30px 30px 0px 30px;
+}
+
+.catalog__pdf {
+  position: absolute;
+  top: 18px;
+  right: -48px;
+  width: 110px;
+  height: 110px;
+  background: #91B6FA;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.catalog__pdf svg {
+  width: 48px;
+}
+
+.catalog__info {
+  padding: 60px 30px 0px 0px;
+  flex: 1;
+}
+
+.catalog__info-title {
+  color: #FFF;
+  font-family: Geometria;
+  font-size: 37px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-bottom: 30px;
+}
+
+.catalog__info-subtitle {
+  color: #FFF;
+  font-family: Geometria;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-bottom: 30px;
+}
+
+.catalog__info-list {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 30px;
+  column-gap: 20px;
+  margin-bottom: 50px;
+}
+
+.catalog__info-list li {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  flex: 0 0 calc(50% - 10px);
+
+}
+
+.catalog__info-list li p {
+  color: #FFF;
+  font-family: Montserrat;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 155%; /* 23.25px */
+}
+
+.catalog__info-list li p span {
+  font-weight: 600;
+}
+
+.catalog__info-circle {
+  min-width: 74px;
+  min-height: 74px;
+  border-radius: 50%;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  color: #FFF;
+  font-family: Geometria;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  background: rgba(132, 175, 255, 0.60);
+}
+
+.catalog__btn-get {
+  color: #002850;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 155%; /* 24.8px */
+  letter-spacing: 0.48px;
+  padding: 18px 60px;
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
+  text-align: center;
+  border-radius: 5px;
+  background: #FFF;
+}
+
+
+.questions {
+  max-width: 1383px;
+  margin: 0 auto;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.questions__content {
+  display: flex;
+  gap: 40px;
+  align-items: center;
+}
+
+.questions__title {
+  color: #002850;
+  font-family: Geometria;
+  font-size: 37px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-bottom: 8px;
+}
+
+.questions__subtitle {
+  color: #000;
+  font-family: Geometria;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  margin-bottom: 20px;
+}
+
+.questions__pic {
+
+}
+
+.questions__pic img {
+  width: 100%;
+}
+
+.questions__form .field.name {
+  margin-bottom: 10px;
+} 
+
+
+.questions__form .btn {
+  margin-top: 10px;
+  color: #fff;
+  font-size: 15px;
+  background: #508cfa;
+  text-align: center;
+  padding: 10px 50px;
+  cursor: pointer;
+  border-radius: 5px;
+  width: 100%;
+}
+
+
+
+@media (max-width: 1086px) {
+  .catalog__info-list li {
+  }
+  .catalog__info {
+    flex: 0 0 100%;
+    padding: 0px 0px 0px 0px;
+  }
+  .catalog__content {
+    flex-wrap: wrap;
+  }
+  .catalog__text-w {
+    margin: 0 auto;
+  }
+  .catalog__content {
+    padding-left: 88px;
+    padding-right: 88px;
+  }
+  .catalog__btn-get {
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 899px) {
+  .catalog__info-list li {
+  }
+  .catalog__info {
+  }
+  .catalog__content {
+  }
+  .catalog__text-w {
+  }
+  .catalog__content {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+  .catalog__btn-get {
+  }
+}
+
+@media (max-width: 767px) {
+  .catalog__info-list li {
+    flex: 0 0 100%;
+  }
+}
+
+@media (max-width: 539px) {
+  .catalog__text-w {
+    flex: 0 0 90%;
+  }
+  .catalog__text {
+    transform: rotate(0deg);
+    margin-top: 0;
+    margin-right: 0;
+  }
+  .catalog__info-title {
+    font-size: 21px;
+    margin-bottom: 15px;
+  }
+  .catalog__info-subtitle {
+    font-size: 17px;
+    margin-bottom: 16px;
+  }
+  .catalog__content {
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 20px;
+    gap: 20px;
+  }
+  .catalog__pdf {
+    width: 64px;
+    height: 64px;
+    top: 18px;
+    right: -12px;
+  }
+  .catalog__pdf svg {
+    width: 25px;
+  }
+  .catalog__info-circle {
+    min-width: 40px;
+    min-height: 40px;
+    font-size: 17px;
+  }
+  .catalog__info-list {
+    margin-bottom: 20px;
+    row-gap: 10px;
+  }
+  .catalog__btn-get {
+    padding: 18px 15px;
+    width: 100%;
+  }
+  .catalog {
+    border-radius: 25px;
+  }
+}
+
+.catalog-w {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.catalog-w_lite {
+  padding-top: 50px;
+}
+
+.catalog-w_lite .catalog  {
+  background: #F6F8FC;
+}
+
+.catalog-w_lite .catalog__text-bg  {
+  background: #FBFCFF;
+}
+
+.catalog-w_lite .catalog__text {
+  background: #DDE7FB;
+}
+.catalog-w_lite .catalog__info-title  {
+  color: #002850;
+}
+.catalog-w_lite .catalog__info-subtitle  {
+  color: #002850;
+}
+
+.catalog-w_lite .catalog__info-list li p {
+  color: #002850;
+}
+
+.catalog-w_lite .catalog__btn-get {
+  background: #4F8BF9;
+  color: #fff;
+}
+
+
+
+
+.questions-w {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+@media (max-width: 1023px) {
+  .questions {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+  .questions__content {
+    flex-wrap: wrap;
+    gap: 20px;
+  }
+  .questions__pic {
+    flex: 0 0 100%;
+  }
+  .questions__form {
+    flex: 1;
+  }
+  .questions__title {
+    text-align: center;
+  }
+  .questions__subtitle {
+    text-align: center;
+  }
+
+}
+
+@media (max-width: 767px) {
+
+  .questions__title {
+    font-size: 28px;
+  }
+}
+
+.questions__form-w {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+}
+
+.questions__form-w .questions__form {
+  width: 100%;
+}
+
+
+.popup-questions .popup__content{
+  max-width: 1200px;
+}
+
+.popup-questions .questions__form-w {
+  flex: 0 0 400px;
+} 
+.popup-questions .questions {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
+.popup-questions .questions-w {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+@media (max-width: 1023px) {
+
+  .popup-questions .questions__form-w {
+    flex: 0 0 100%;
+  } 
+}
+
+@media (max-width: 767px) {
+  .popup-questions .questions__title {
+    font-size: 24px;
+  }
+}
+
+.popup-catalog .popup__content{
+  max-width: 1200px;
+}
+
+
+.popup-catalog .popup__content{
+  padding: 0;
+}
+.popup-catalog .catalog-w{
+  padding: 0;
+}
+.popup-catalog .catalog{
+  border-radius: 12px;
+}
+
+.popup-catalog .catalog__info-circle{
+    min-width: 49px;
+    min-height: 49px;
 }
