--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -8625,7 +8625,7 @@ body.scroll_fixed {
   display: flex;
   gap: 50px;
   padding-left: 88px;
-  padding-bottom: 60px;
+  padding-bottom: 45px;
 }
 
 .catalog__text-w {
@@ -8651,7 +8651,6 @@ body.scroll_fixed {
   height: fit-content;
   position: relative;
   transform: rotate(-9deg);
-  margin-top: 58px;
   margin-right: 30px;
 }
 
@@ -8700,6 +8699,29 @@ body.scroll_fixed {
   padding: 30px 30px 0px 30px;
 }
 
+@media (max-width: 539px) {
+  .catalog__text-body {
+    padding: 15px 15px 0px 15px;
+  }
+  .catalog__pic {
+    height: 100px;
+  }
+  .catalog__text-footer {
+    padding: 7px 14px;
+  }
+  .catalog__title {
+    font-size: 16.072px;
+    line-height: 91.962%;
+  }
+  .catalog__subtitle {
+    margin-bottom: 10px;
+  }
+  .catalog__pic {
+    margin-bottom: 10px;
+  }
+}
+
+
 .catalog__pdf {
   position: absolute;
   top: 18px;
@@ -8719,7 +8741,7 @@ body.scroll_fixed {
 }
 
 .catalog__info {
-  padding: 60px 30px 0px 0px;
+  padding: 40px 30px 0px 0px;
   flex: 1;
 }
 
@@ -8730,7 +8752,7 @@ body.scroll_fixed {
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
 }
 
 .catalog__info-subtitle {
@@ -8740,15 +8762,15 @@ body.scroll_fixed {
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
 }
 
 .catalog__info-list {
   display: flex;
   flex-wrap: wrap;
-  row-gap: 30px;
+  row-gap: 15px;
   column-gap: 20px;
-  margin-bottom: 50px;
+  margin-bottom: 27px;
 }
 
 .catalog__info-list li {
@@ -8773,8 +8795,8 @@ body.scroll_fixed {
 }
 
 .catalog__info-circle {
-  min-width: 74px;
-  min-height: 74px;
+  min-width: 50px;
+  min-height: 50px;
   border-radius: 50%;
   display: flex;
   text-align: center;
@@ -8782,7 +8804,7 @@ body.scroll_fixed {
   justify-content: center;
   color: #FFF;
   font-family: Geometria;
-  font-size: 22px;
+  font-size: 20px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
@@ -8914,10 +8936,9 @@ body.scroll_fixed {
 
 @media (max-width: 539px) {
   .catalog__text-w {
-    flex: 0 0 90%;
+    flex: 0 0 207px;
   }
   .catalog__text {
-    transform: rotate(0deg);
     margin-top: 0;
     margin-right: 0;
   }
@@ -8933,13 +8954,13 @@ body.scroll_fixed {
     padding-left: 15px;
     padding-right: 15px;
     padding-bottom: 20px;
-    gap: 20px;
+    gap: 50px;
   }
   .catalog__pdf {
-    width: 64px;
-    height: 64px;
-    top: 18px;
-    right: -12px;
+    width: 58px;
+    height: 58px;
+    top: 4px;
+    right: -7px;
   }
   .catalog__pdf svg {
     width: 25px;
@@ -8958,7 +8979,7 @@ body.scroll_fixed {
     width: 100%;
   }
   .catalog {
-    border-radius: 25px;
+    border-radius: 5px;
   }
 }
 
@@ -9053,6 +9074,15 @@ body.scroll_fixed {
     max-width: none;
   }
 }
+@media (max-width: 539px) {
+  .questions {
+    border: 1px solid #96969663;
+    padding: 17px;
+    border-radius: 5px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+}
 
 .questions__form-w .questions__form {
   width: 100%;
@@ -9125,9 +9155,11 @@ body.scroll_fixed {
   position: absolute;
   left: 33px;
   top: 50%;
-  flex: 0 0 195px;
+  flex: 0 0 167px;
   transform: translate(0px, -50%);
 }
+
+
 
 .catalog-w_mini .catalog__content {
   
@@ -9261,6 +9293,8 @@ body.scroll_fixed {
     padding: 10px 10px;
   }
   .catalog-w_mini {
+    padding-left: 15px;
+    padding-right: 15px;
     margin-top: 0px;
     margin-bottom: 20px;
   }
@@ -9395,5 +9429,15 @@ body.scroll_fixed {
   }
   .remotely__text p {
     font-size: 16px;
+  }
+}
+
+
+@media (max-width: 1399px) and (min-width: 1280px) {
+  .catalog-w_mini .catalog__text-w {
+    width: 167px;
+  }
+  .catalog-w_mini .catalog__content {
+      padding-left: 223px;
   }
 }
