--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -2766,8 +2766,14 @@ body.scroll_fixed {
   margin-bottom: 10px;
 }
 
+.place__top-img {
+  height: 450px;
+}
+
 .place__top-img img {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .place__left-collage {
@@ -2778,13 +2784,34 @@ body.scroll_fixed {
 
 .place__collage-item {
   margin-bottom: 10px;
-  flex: 0 0 calc(50% - 5px)
+  flex: 0 0 calc(50% - 5px);
+  height: 300px;
 }
 
 .place__collage-item img {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
+
+@media (max-width: 1023px) {
+  .place__top-img {
+    height: 300px;
+  }
+  .place__collage-item {
+    height: 230px;
+  }
+}
+
+@media (max-width: 899px) {
+  .place__top-img {
+    height: 290px;
+  }
+  .place__collage-item {
+    height: 270px;
+  }
+}
 .place__right-col {
   background-color: #ffffff;
   padding-top: 20px;
