--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -2731,7 +2731,7 @@ body.scroll_fixed {
 .object__description {
   padding-left: 20px;
   padding-right: 30px;
-  padding-bottom: 96px;
+  padding-bottom: 50px;
 }
 
 .object__description-title {
@@ -6707,7 +6707,7 @@ body.scroll_fixed {
 
 .realty__img_b {
   overflow: hidden;
-  padding-bottom: 69%;
+  padding-bottom: 68.6%;
   position: relative;
 }
 @media (max-width: 899px) {
@@ -6772,6 +6772,9 @@ body.scroll_fixed {
   .realty__left-col_1 {
   flex: 1 0 calc(67% - 10px);
   }
+  .realty__img_b {
+    padding-bottom: 66.6%;
+  }
 }
 .realty__left-col_2 {
   display: flex;
@@ -6795,7 +6798,7 @@ body.scroll_fixed {
 }
 
 .realty__right-col .realty__item {
-  flex: 1 0 calc(33% - 10px)
+  flex: 1 0 calc(33.333% - 13px)
 }
 .realty__content {
   gap: 20px;
