--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -1690,7 +1690,8 @@ body {
 .about h2 {
   font-weight: bold;
   font-size: 20px;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
+  margin-top: 20px;
 }
 
 
