add: new field email to form

--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -9885,3 +9885,9 @@ body.scroll_fixed {
 .carousel.widget__footer.widget__footer-top-right {
   display: none;
 }
+.field.email {
+  display: block;
+}
+.field.email.hidden {
+  display: none;
+}
